# statbot

./: .gitignore  README.md  pyproject.toml
statbot/: __init__.py  demo.py  demo_code.cpp  demo_code.js  demo_code.py  statbot.py  test_language_support.py
statbot/language_support/: __init__.py  detection.py  profiles.py  prompt_builder.py  registry.py
